infrastructure/apps/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: blog
          image: ghcr.io/whutchinson98/blog:ae59ca5 # {"$imagepolicy": "apps:blog"}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
