infrastructure/apps/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: apps
spec:
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 80
