infrastructure/apps/blog/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blog.thehutchery.com`)
      kind: Rule
      services:
        - name: blog
          port: 80
  tls:
    secretName: blog-tls
